samples/_failures_safe/1761188876_d63c8a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_90e16436.c: In function ‘tokenize’:
./samples/SAFE/__tmp_90e16436.c:164:9: error: expected expression at end of input
  164 |         tokens[token_count].value[0] =
      |         ^~~~~~
./samples/SAFE/__tmp_90e16436.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_90e16436.c:164:9: error: expected declaration or statement at end of input
